<resources>
    <string name="app_name">Order Made Easy</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="last_logged_on">Last Logged on: </string>
    <string name="dummy_time">12-Feb-2019 11:11</string>
    <string name="home">Home</string>
    <string name="search_products">Search Products</string>
    <string name="search_products_min_letters">Min. 3 letters to search product</string>
    <string name="your_orders">Your Orders</string>
    <string name="your_cart">Your Cart</string>
    <string name="your_account">Your Account</string>
    <string name="logout">Logout</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="customer_login_txt">Retailer Login</string>
    <string name="forgot_password_txt">Forgot Password? </string>
    <string name="click_here_forgot_password">Click Here</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="submit">Submit</string>
    <string name="click_to_login"> to login</string>
    <string name="click_here">Click here</string>
    <string name="http_error">http error</string>
    <string name="error_connecting_error">error connecting server</string>
    <string name="error_passing_data">error passing data</string>
    <string name="error_unexpected">unexpected error</string>
    <string name="check_internet_connection">Check Internet Connection</string>
    <string name="retry">Retry</string>
    <string name="history">History</string>
    <string name="loading">Loading…</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="permission_necessary">Permission Requested</string>
    <string name="storage_permission_is_encessary_to_wrote_event">Please provide the storage permission..</string>
    <string name="yes">Yes</string>
    <string name="enter_email">Please enter Email Id</string>
    <string name="enter_user_name">Please enter User Name</string>
    <string name="enter_reg_email">Please enter registered Email Id</string>
    <string name="alert">Alert</string>
    <string name="success">Success</string>
    <string name="powered_by_text">Powered by OME Ventures and Solutions Pvt Ltd.</string>
    <string name="items_in_cart">Items in cart :</string>
    <string name="items_in_cart_dash">Items in cart</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="product_desc">Product Description</string>
    <string name="dealer_name">Dealers</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="your_cart_items">Your Cart Summary</string>
    <string name="proceed_to_cart">Proceed to Cart</string>
    <string name="more_items">More Items</string>
    <string name="your_pending_orders">Pending Orders</string>
    <string name="product_name">Product Name</string>
    <string name="qty">Qty:</string>
    <string name="error_connecting_server">Error Connecting Server</string>
    <string name="dealer_txt">Dealer : </string>
    <string name="confirm_order">Confirm Order</string>
    <string name="order_placed">Your order placed successfully!</string>
    <string name="no_orders_available">No orders available!</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name(Optional)</string>
    <string name="last_name">Last Name</string>
    <string name="update_profile">Update Profile</string>
    <string name="no_pending_orders">No pending orders</string>
    <string name="cart_is_empty">Your cart is empty!</string>
    <string name="duplicate_product_alert_txt">You had already ordered the product Name Dealer Name and quantity. Do you want to place the order again?</string>
    <string name="yes_txt">Yes</string>
    <string name="no_txt">No</string>
    <string name="no_dealer_map_msg">You are not mapped to any dealer, please get in touch with your dealer to view the products.</string>
    <string name="ok_txt">OK</string>
    <string name="access_denied">Access Denied</string>
    <string name="delete_product">Are you sure want to delete this item?</string>
    <string name="wrong_credentials">Username or password is incorrect!</string>
    <string name="app_version_text">Version :</string>
    <string name="app_version">3.0</string>
    <string name="server_error">Error connecting server</string>
    <string name="relogin">Something went wrong. Please re-login again.</string>
    <string name="no_product_by_key">No Products available by the given search key word</string>
    <string name="change_pass">Change Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="update_password">Update Password</string>
    <string name="user_name">User Name</string>
    <string name="product_description">Product Details</string>
    <string name="category">Category</string>
    <string name="sub_category">Sub Category</string>
    <string name="type">Category Type</string>
    <string name="dealer">Dealer</string>
    <string name="no_internet">No internet connection!</string>
    <string name="cancel_order">Are you sure you want to cancel order?</string>
    <string name="login_success">You have successfully logged in!</string>
    <string name="account_confirmation">Your email is linked with multiple accounts, so you have to choose the account before you proceed!</string>
    <string name="account_confirmation2">so you have to choose the Account before you Proceed!</string>
    <string name="txt_continue">Continue</string>
    <string name="switch_account">Switch Account</string>
    <string name="zero">0</string>
    <string name="total_cart_value">Total Cart Value :</string>
    <string name="orders_report">Orders Report History</string>
    <string name="pending_orders">Pending Orders</string>
    <string name="create_cart">Create Cart</string>
    <string name="contact">Contact Number</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="pincode">Pin Code</string>
    <string name="address">Address</string>
    <string name="address_op">Address 2(Optional)</string>
    <string name="sign_up">Sign Up As Consumer</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="otp">OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="click_here_to">Click here to</string>
    <string name="order_made">Order Made</string>
    <string name="easy">Easy</string>
    <string name="sign_in">Sign In</string>
    <string name="first_name_check">Please enter first name.</string>
    <string name="mandatory_field_check">Please enter all mandatory fields.</string>
    <string name="last_name_check">Please enter last name.</string>
    <string name="empty_mobile_check">Please enter mobile number.</string>
    <string name="valid_mobile_check">Please enter valid mobile number.</string>
    <string name="pincode_validation">Pincode should be 6 digits.</string>
    <string name="shopper_supplier">Shopper/Supplier</string>
    <string name="consumer">Consumer</string>
    <string name="mobile_num">Phone</string>
    <string name="otp_validate">Please enter OTP.</string>
    <string name="no_company_found">No company found with the given keyword.</string>
    <string name="view_products">View Products</string>
    <string name="selected_company">Selected Company</string>
    <string name="colon">:</string>
    <string name="add_favourite_company">Add Favourite Company</string>
    <string name="view_details">View Details</string>
    <string name="search">Search</string>
    <string name="consumer_orders_report">Consumer Orders Report</string>
    <string name="shopper_orders_report">Shopper Orders Report</string>
    <string name="no_orders">No Orders Available</string>
    <string name="consumer_orders">Consumer Orders</string>
    <string name="shopper_orders">Shopper Orders</string>
    <string name="company_name">Company Name</string>
    <string name="amount">Amount</string>
    <string name="order_number">Order Number</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="order_no">Order #</string>
    <string name="others">Others</string>
    <string name="search_for_products">Search here for products</string>
    <string name="search_for_company">Search here for company</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="rs">\u20B9</string>
    <string name="product_price">Price</string>
    <string name="consumer_orders_history">Consumer Orders History</string>
    <string name="shopper_orders_history">Shopper Orders History</string>
    <string name="search_company">Search Company</string>
    <string name="company_exists">You already have products in cart with %1$s company,
        \nTo change the company please place order or clear cart!</string>
    <string name="navigation_drawer_open">open</string>
    <string name="address_line_optional">Address Line 2</string>
    <string name="address_line">Address Line 1</string>
    <string name="app_update">A newer version is available on play store do you want to update?</string>

</resources>
