<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_search_products"
            android:icon="@drawable/search_product"
            android:title="@string/search_products" />
        <item
            android:id="@+id/nav_your_orders"
            android:icon="@drawable/yours_orders"
            android:title="@string/your_orders" />
        <item
            android:id="@+id/nav_your_cart"
            android:icon="@drawable/your_cart"
            android:title="@string/your_cart" />
        <item
            android:id="@+id/nav_switch_account"
            android:icon="@drawable/switch_user"
            android:title="@string/switch_account" />
        <item
            android:id="@+id/nav_your_account"
            android:icon="@drawable/your_account"
            android:title="@string/your_account" />
        <item
            android:id="@+id/nav_change_password"
            android:icon="@drawable/change_password"
            android:title="@string/change_pass" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
    </group>

</menu>
