<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">
       <ImageView
           android:layout_width="0dp"
           android:layout_height="@dimen/margin_seventy_five"
           app:srcCompat="@mipmap/ic_launcher"
           android:layout_gravity="center"
           android:layout_margin="@dimen/margin_five"
           android:layout_weight="0.5"
           android:visibility="gone"
           android:id="@+id/iv_product_image"/>
       <LinearLayout
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:layout_margin="@dimen/margin_five"
           android:layout_weight="1">
           <TextView
               android:id="@+id/tv_company_name"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/product_name"
               android:textAllCaps="true"
               android:textSize="@dimen/activity_textSize_small_16"
               android:textColor="@color/menu_text_color"
               android:layout_margin="@dimen/margin_two"/>
           <TextView
               android:id="@+id/tv_state_desc"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/product_desc"
               android:textSize="@dimen/activity_textSize_small_14"
               android:textColor="@color/menu_text_color"
               android:layout_margin="@dimen/margin_two"/>
           <TextView
               android:id="@+id/tv_address_name"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/dealer_name"
               android:textSize="@dimen/activity_textSize_small_14"
               android:textColor="@color/menu_text_color"
               android:layout_margin="@dimen/margin_two"/>
       </LinearLayout>
       <FrameLayout
           android:layout_width="0dp"
           android:layout_height="match_parent"
           android:layout_weight="0.8"
           android:layout_margin="@dimen/margin_five"
           android:gravity="end"
           android:orientation="vertical">
           <CheckBox
               android:layout_width="@dimen/extra_small_image_view"
               android:layout_height="@dimen/extra_small_image_view"
               android:id="@+id/rb_favourite"
               android:layout_gravity="end"
               style="@style/FavouriteCompanyStyle"/>
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@drawable/app_button_background"
               android:text="@string/view_products"
               android:padding="@dimen/margin_three"
               android:textColor="@color/white"
               android:gravity="center"
               android:layout_gravity="bottom"
               android:id="@+id/tv_view_product"/>
       </FrameLayout>
   </LinearLayout>

    <TextView
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_to_cart"
        android:textSize="@dimen/activity_textSize_small_13"
        android:background="@color/colorPrimary"
        android:textColor="@color/menu_text_color"
        android:paddingTop="@dimen/margin_three"
        android:paddingBottom="@dimen/margin_three"
        android:paddingRight="@dimen/margin_five"
        android:visibility="gone"
        android:paddingLeft="@dimen/margin_five"
        android:id="@+id/tv_add_to_cart"
        android:layout_margin="@dimen/margin_five"/>

</FrameLayout>
