<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/transparency"
    android:layout_gravity="center"
    android:gravity="center"
    android:padding="@dimen/margin_five">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@drawable/side_border">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/view_margin_medium">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alert"
            android:textColor="@color/menu_text_color"
            android:textAlignment="center"
            android:padding="@dimen/margin_two"
            android:background="@drawable/button_background"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/tv_alertText"
            android:textAlignment="center"
            android:text="@string/duplicate_product_alert_txt"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/button_yes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/large_view_margin"
                android:text="@string/yes_txt"
                android:layout_marginBottom="@dimen/view_margin"
                android:padding="@dimen/view_margin"
                android:layout_marginLeft="@dimen/margin_five"
                android:layout_marginRight="@dimen/margin_five"
                android:background="@drawable/app_button_background"
                android:textColor="@color/white" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.2"/>
            <TextView
                android:id="@+id/button_no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/large_view_margin"
                android:layout_marginBottom="@dimen/view_margin"
                android:text="@string/no_txt"
                android:background="@drawable/app_button_background"
                android:layout_marginLeft="@dimen/margin_five"
                android:layout_marginRight="@dimen/margin_five"
                android:padding="@dimen/view_margin"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>

</LinearLayout>