<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="@dimen/margin_five">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.3">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@mipmap/ic_launcher"
            android:layout_gravity="center"
            android:id="@+id/iv_product_image"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin_five">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textAllCaps="true"
            android:id="@+id/tv_product_name"
            android:textColor="@color/menu_text_color"
            android:textSize="@dimen/activity_textSize_small_14"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_desc"
            android:id="@+id/tv_product_desc"
            android:textColor="@color/menu_text_color"
            android:textSize="@dimen/activity_textSize_small_13"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dealer_txt"
                android:id="@+id/tv_dealer_txt"
                android:layout_gravity="center"
                android:textColor="@color/blue_sky_text"
                android:textSize="@dimen/activity_textSize_small_13"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_dealers_name"
                android:layout_gravity="center"
                android:textColor="@color/menu_text_color"
                android:textSize="@dimen/activity_textSize_small_13"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_margin="@dimen/margin_two"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight=".2"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="end"
        android:layout_marginLeft="@dimen/margin_five"
        android:layout_marginRight="@dimen/margin_five">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qty"
            android:layout_gravity="center"
            android:id="@+id/tv_qty_txt"
            android:textColor="@color/menu_text_color"
            android:textSize="@dimen/activity_textSize_small_13"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/tv_qty"
            android:textColor="@color/menu_text_color"
            android:textSize="@dimen/activity_textSize_small_13"
            android:layout_margin="@dimen/margin_two"/>
    </LinearLayout>
</LinearLayout>

</androidx.cardview.widget.CardView>
